k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: easycv
  labels:
    app.kubernetes.io/part-of: easycv
    app.kubernetes.io/managed-by: kubectl
